Added hover effect on mouseover and added a small reset button

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -10,7 +10,9 @@
 
   <body>
   <div class = "container" id = "grid-container"></div>
-  <script src="main.js"></script>
+  <button type = "button">Reset</button>
+  <script src="main.js">
+  </script>
   </body>
 
   <script src="main.js"></script>
