Changed to flex and added button for changing grid size below 100

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -9,8 +9,11 @@
   </head>
 
   <body>
+  <div class = 'reset-button'>
+    <button>Press Me</button>
+  </div>
   <div class = "container" id = "grid-container"></div>
-  <button type = "button">Reset</button>
+
   <script src="main.js">
   </script>
   </body>
